# focusforge

./: .env.backend.template  .env.example  .env.frontend.template  .env.mobile.template  .gitignore  DECOUPLED_ARCHITECTURE.md  Dockerfile  FEATURE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  MCP_INTEGRATION.md  MEMORY_CHAIN_PLANNER_ARCHITECTURE.md  MIGRATION.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SCALABILITY_OPTIMIZATION_PLAN.md  VERIFICATION_CHECKLIST.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.mobile.yml  docker-compose.prod.yml  docker-compose.yml  manage-services.ps1  nginx.conf  pyproject.toml  requirements.txt  service-manager.ps1  setup-dev.bat  setup-dev.sh  setup_mcp.ps1  start-backend.ps1  start-backend.sh  start-frontend.ps1  start-frontend.sh  start-mobile.sh  start_mcp_server.py  test_mcp_client.py  test_mcp_curl.sh  test_mcp_endpoints.ps1  test_mcp_endpoints.py  (+1 more)
backend/: ARCHITECTURE.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_SETUP.md  BACKEND_FEATURES_AND_FLOW.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_auth.py  test_schemas.py
backend/app/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agents.py  analytics.py  auth.py  calendar.py  mcp.py  mood.py  orchestrator.py  pomodoro.py  proofs.py  rituals.py  spotify.py  store.py  tasks.py  users.py
backend/app/core/: ai_optimizer.py  auth.py  background_tasks.py  cache.py  chains.py  config.py  database.py  enhanced_config.py  memory.py  middleware.py  monitoring.py  orchestrator.py  planner.py  service_manager.py  unified_mcp.py  vector_store.py
backend/app/mcp/: __init__.py  client.py  config.py  server.py  simplified_server.py
backend/app/models/: api_schemas.py  enhanced_schemas.py  schemas.py
backend/app/services/: analytics_service.py  calendar_service.py  llm_service.py  mood_service.py  pomodoro_service.py  proof_service.py  ritual_service.py  spotify_service.py  store_service.py  task_service.py  user_service.py
cli/: README.md  api_client.go  build.bat  build.sh  go.mod  go.sum  main.go
frontend/: API_INTEGRATION.md  Dockerfile.prod  README.md  TEST_RESULTS.md  env.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx  index.css  index.js  main.tsx  vite-env.d.ts
frontend/src/components/: Layout.js
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/dashboard/: AITipCard.tsx  CurrencyDisplay.tsx  FocusSessionCard.tsx  MoodCheckCard.tsx  ProgressRing.tsx  StreakCounter.tsx  TasksPreview.tsx  WelcomeCard.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx  PublicLayout.tsx  Sidebar.tsx
frontend/src/components/tasks/: PomodoroTimer.tsx  TaskCreateModal.tsx  TaskDetailModal.tsx
frontend/src/components/ui/: AnimatedButton.tsx  AnimatedCard.tsx  Button.tsx  Card.tsx  Input.tsx  LoadingScreen.tsx  MobileOptimized.tsx  NotificationContainer.tsx  index.ts
frontend/src/hooks/: useApi.ts  useMediaQuery.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Analytics.js  AuthCallback.tsx  Calendar.tsx  Dashboard.js  Dashboard.tsx  Login.tsx  Mood.tsx  Pomodoro.js  Profile.tsx  Rituals.tsx  Settings.js  Store.js  Store.tsx  TaskDetail.tsx  Tasks.js  Tasks.tsx
frontend/src/services/: api.js  api.ts
frontend/src/stores/: useAuthStore.ts  useCalendarStore.ts  useMoodStore.ts  useRitualStore.ts  useStoreStore.ts  useTaskStore.ts  useUIStore.ts
frontend/src/types/: index.ts
infrastructure/nginx/: nginx.conf
mobile/: Dockerfile.dev  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/core/: app.dart
mobile/lib/core/theme/: app_theme.dart
monitoring/: prometheus.yml
src/agents/: accountability.py  llm_decomposer.py  reward_engine.py
src/cli/: main.py
src/core/: mcp.py  settings.py  store.py
src/prompts/: task_breakdown_prompt.txt
src/spotify/: spotify_client.py
src/utils/: timer.py
